--- a/partials/api/apDataService.html
+++ b/partials/api/apDataService.html
@@ -3,9 +3,9 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="apdataservice-page"><p>Handles all interaction with SharePoint web services</p>
-<p>For additional information on many of these web service calls, see Marc Anderson&#39;s SPServices documentation
- <a href="http://spservices.codeplex.com/documentation">http://spservices.codeplex.com/documentation</a></p>
+<div class="description"><div class="apdataservice-page"><p>Handles all interaction with SharePoint&#39;s SOAP web services.  Mostly a wrapper for SPServices functionality.</p>
+<p>For additional information on many of these web service calls, see Marc Anderson&#39;s
+<a href="http://spservices.codeplex.com/documentation">SPServices</a> documentation.</p>
 </div></div>
 <h2 id="dependencies">Dependencies</h2>
 <ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apQueueService">apQueueService</a></code>
