--- a/partials/api/List.FieldDefinition.html
+++ b/partials/api/List.FieldDefinition.html
@@ -9,10 +9,13 @@ in a SharePoint list/library to a JavaScript object using the internal SharePoin
 type, and the desired JavaScript property name to add onto the parsed list item object. Ignore shown usage,
 each field definition is just an object within the fieldDefinitions array.</p>
 </div></div>
-<h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">FieldDefinition(internalName, objectType, mappedName, readOnly);</pre>
-<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>internalName</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="list-fielddefinition-page"><p>The actual SharePoint field name.</p>
-</div></td></tr><tr><td>objectType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="list-fielddefinition-page"><dl>
+<div class="member property"><h2 id="properties">Properties</h2>
+<ul class="properties"><li><h3 id="properties_internalname">internalName</h3>
+<div class="internalname"><div class="list-fielddefinition-page"><p>The actual SharePoint field name.</p>
+</div></div>
+</li>
+<li><h3 id="properties_[objecttype=text]">[objectType='Text']</h3>
+<div class="[objecttype=text]"><div class="list-fielddefinition-page"><dl>
 <dt>Boolean</dt>
 <dd>Used to store a TRUE/FALSE value (stored in SharePoint as 0 or 1).</dd>
 <dt>Calc</dt>
@@ -51,6 +54,7 @@ thrown with additional info on specifically what is invalid.</dd>
 <dd>Passes string to Lookup constructor where it is broken into an object containing
 a &quot;lookupValue&quot; and &quot;lookupId&quot; attribute.  Inherits additional prototype methods from
 Lookup.  See &quot;Lookup&quot; for more info.</dd>
+See <a href="#/api/Lookup">Lookup</a> for more information.
 <dt>LookupMulti</dt>
 <dd>Converts multiple delimited &quot;;#&quot; strings into an array of Lookup objects.</dd>
 <dt>MultiChoice</dt>
@@ -66,14 +70,25 @@ later.
 <dt>User</dt>
 <dd>Similar to Lookup but uses the &quot;User&quot; prototype as a constructor to convert into a
 User object with &quot;lookupId&quot; and &quot;lookupValue&quot; attributes.  The lookupId is the site collection
-ID for the user and the lookupValue is typically the display name.</dd>
+ID for the user and the lookupValue is typically the display name.
+See <a href="#/api/User">User</a> for more information.
+</dd>
 <dt>UserMulti</dt>
 <dd>Parses delimited string to returns an array of User objects.</dd>
-</dl></div> <p><em>(default: 'Text')</em></p></td></tr><tr><td>mappedName</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="list-fielddefinition-page"><p>The attribute name we&#39;d like to use
+</dl></div></div>
+</li>
+<li><h3 id="properties_mappedname">mappedName</h3>
+<div class="mappedname"><div class="list-fielddefinition-page"><p>The attribute name we&#39;d like to use
 for this field on the newly created JS object.</p>
-</div></td></tr><tr><td>readOnly</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="list-fielddefinition-page"><p>When saving, we only push fields
+</div></div>
+</li>
+<li><h3 id="properties_[readonly=false]">[readOnly=false]</h3>
+<div class="[readonly=false]"><div class="list-fielddefinition-page"><p>When saving, we only push fields
 that are mapped and not read only.</p>
-</div> <p><em>(default: false)</em></p></td></tr></tbody></table></div>
+</div></div>
+</li>
+</ul>
+</div>
 <h2 id="example">Example</h2>
 <div class="example"><div class="list-fielddefinition-page"><pre class="prettyprint linenums">
 angular.module('App')
