--- a/partials/api/ListItem.deleteAttachment.html
+++ b/partials/api/ListItem.deleteAttachment.html
@@ -11,4 +11,16 @@
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>url</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="listitem-deleteattachment-page"><p>Requires the URL for the attachment we want to delete.</p>
 </div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="listitem-deleteattachment-page"><p>Promise which resolves with the updated attachment collection.</p>
 </div></td></tr></table></div>
+<h2 id="example">Example</h2>
+<div class="example"><div class="listitem-deleteattachment-page"><pre class="prettyprint linenums">
+$scope.deleteAttachment = function (attachment) {
+    var confirmation = window.confirm("Are you sure you want to delete this file?");
+    if (confirmation) {
+        scope.listItem.deleteAttachment(attachment).then(function () {
+            alert("Attachment successfully deleted");
+        });
+    }
+};
+</pre>
+</div></div>
 </div>
