--- a/partials/api/ListItem.deleteItem.html
+++ b/partials/api/ListItem.deleteItem.html
@@ -14,4 +14,13 @@ removed everywhere.  This is more process intensive so by default we only remove
 cache where this entity is currently stored.</p>
 </div> <p><em>(default: false)</em></p></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="listitem-deleteitem-page"><p>Promise which really only lets us know the request is complete.</p>
 </div></td></tr></table></div>
+<h2 id="example">Example</h2>
+<div class="example"><div class="listitem-deleteitem-page"><pre><code>&lt;ul&gt;
+   &lt;li ng-repeat=&quot;task in tasks&quot;&gt;
+       {{task.title}} &lt;a href ng-click=&quot;task.deleteItem()&gt;delete&lt;/a&gt;
+   &lt;/li&gt;
+&lt;/ul&gt;</code></pre>
+<p>List of tasks.  When the delete link is clicked, the list item item is removed from the local cache and
+the view is updated to no longer show the task.</p>
+</div></div>
 </div>
