--- a/partials/api/angularPoint.apListItemFactory.html
+++ b/partials/api/angularPoint.apListItemFactory.html
@@ -4,10 +4,13 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="angularpoint-aplistitemfactory-page"><p>Exposes the ListItem prototype and a constructor to instantiate a new ListItem.</p>
+<div class="description"><div class="angularpoint-aplistitemfactory-page"><p>Exposes the ListItem prototype and a constructor to instantiate a new ListItem.
+See <a href="#/api/ListItem">ListItem</a> for details of the methods available on the prototype.</p>
 </div></div>
 <h2 id="dependencies">Dependencies</h2>
-<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apCacheService">apCacheService</a></code>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/ListItem">ListItem</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apCacheService">apCacheService</a></code>
 </li>
 <li><code ng:non-bindable=""><a href="#/api/angularPoint.apDataService">apDataService</a></code>
 </li>
