--- a/partials/api/ListItem.html
+++ b/partials/api/ListItem.html
@@ -3,6 +3,7 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="listitem-page"><p>Base prototype which all list items inherit CRUD functionality that can be called directly from obj.</p>
+<div class="description"><div class="listitem-page"><p>Base prototype which all list items inherit from.  All methods can be accessed through this prototype so all CRUD
+functionality can be called directly from a given list item.</p>
 </div></div>
 </div>
