Dedicated some time to adding more examples and updated the WebStorm live templates.

--- a/docs/partials/api/ListItem.html
+++ b/docs/partials/api/ListItem.html
@@ -3,9 +3,7 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="listitem-page"><p>Base prototype which all list items inherit CRUD functionality that can be called directly from obj.</p>
+<div class="description"><div class="listitem-page"><p>Base prototype which all list items inherit from.  All methods can be accessed through this prototype so all CRUD
+functionality can be called directly from a given list item.</p>
 </div></div>
-<h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">ListItem();</pre>
-</div>
 </div>
