--- a/docs/partials/api/List.html
+++ b/docs/partials/api/List.html
@@ -15,6 +15,7 @@ ex:&#39;{4D74831A-42B2-4558-A67F-B0B5ADBC0EAC}&#39;</p>
 ex: &#39;ProjectsList&#39; so the offline XML file would be located at dev/ProjectsList.xml</p>
 </div></td></tr><tr><td>[config.customFields]</td><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="list-page"><p>Mapping of SharePoint field names to the internal names we&#39;ll be using
 in our application.  Also contains field type, readonly attribute, and any other non-standard settings.
+See <a href="#/api/List.FieldDefinition">List.customFields</a> for additional info on how to define a field type.
 <pre class="prettyprint linenums">
 [
   {
