--- a/docs/partials/api/Query.html
+++ b/docs/partials/api/Query.html
@@ -8,10 +8,10 @@
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">Query(config, model);</pre>
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>config</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="query-page"><p>Initialization parameters.</p>
-</div></td></tr><tr><td>[config.operation</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="query-page"><p>= GetListItemChangesSinceToken] Optionally use &#39;GetListItems&#39; to
+</div></td></tr><tr><td>config.operation</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="query-page"><p>Optionally use &#39;GetListItems&#39; to
 receive a more efficient response, just don&#39;t have the ability to check for changes since the last time
 the query was called.</p>
-</div></td></tr><tr><td>config.cacheXML</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="query-page"><p>Set to false if you want a fresh request.</p>
+</div> <p><em>(default: GetListItemChangesSinceToken)</em></p></td></tr><tr><td>config.cacheXML</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="query-page"><p>Set to false if you want a fresh request.</p>
 </div> <p><em>(default: true)</em></p></td></tr><tr><td>config.query</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="query-page"><p>CAML query passed to SharePoint to control
 the data SharePoint returns.</p>
 </div> <p><em>(default: Ordered ascending by ID)</em></p></td></tr><tr><td>[config.queryOptions]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="query-page"><p>SharePoint options.
@@ -37,7 +37,15 @@ queryOptions: '' +
 scope.</p>
 </div></td></tr></tbody></table></div>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_searchlocalcache">searchLocalCache(value, [options])</h3>
+<ul class="methods"><li><h3 id="methods_execute">execute([options])</h3>
+<div class="execute"><div class="query-execute-page"><p>Query SharePoint, pull down all initial records on first call along with list definition if using
+&quot;GetListItemChangesSinceToken&quot;.  Note: this is  substantially larger than &quot;GetListItems&quot; on first call.
+Subsequent calls pulls down changes (Assuming operation: &quot;GetListItemChangesSinceToken&quot;).</p>
+</div><h5 id="methods_execute_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>[options]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="query-execute-page"><p>Any options that should be passed to dataService.executeQuery.</p>
+</div></td></tr></tbody></table><h5 id="methods_execute_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="query-execute-page"><p>Array of list item objects.</p>
+</div></td></tr></table></div>
+</li>
+<li><h3 id="methods_searchlocalcache">searchLocalCache(value, [options])</h3>
 <div class="searchlocalcache"><div class="query-searchlocalcache-page"><p>Simple wrapper that by default sets the search location to the local query cache.</p>
 </div><h5 id="methods_searchlocalcache_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>value</td><td><a href="" class="label type-hint type-hint-object">*</a></td><td><div class="query-searchlocalcache-page"><p>Value to evaluate against.</p>
 </div></td></tr><tr><td>[options]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="query-searchlocalcache-page"><p>Options to pass to Model.prototype.searchLocalCache.</p>
