--- a/docs/partials/api/Model.html
+++ b/docs/partials/api/Model.html
@@ -22,7 +22,7 @@ be passed to the list constructor to extend further</li>
 </ul>
 </div></td></tr><tr><td>config.list.title</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-page"><ul>
 <li>List name, no spaces.  Offline XML file will need to be
-named the same (ex: CustomList so xml file would be /dev/CustomList.xml)</li>
+named the same (ex: CustomList so xml file would be apConfig.offlineXML + &#39;/CustomList.xml&#39;)</li>
 </ul>
 </div></td></tr><tr><td>config.list.guid</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-page"><ul>
 <li>Unique SharePoint ID (ex: &#39;{3DBEB25A-BEF0-4213-A634-00DAF46E3897}&#39;)</li>
