--- a/partials/api/apDataService.executeQuery.html
+++ b/partials/api/apDataService.executeQuery.html
@@ -14,7 +14,7 @@
 </div></td></tr><tr><td>options.target</td><td><a href="" class="label type-hint type-hint-array">Array</a></td><td><div class="apdataservice-executequery-page"><p>The target destination for returned entities</p>
 </div> <p><em>(default: model.getCache())</em></p></td></tr><tr><td>options.offlineXML</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="apdataservice-executequery-page"><p>Optionally include the location of
 a custom offline XML file specifically for this query.</p>
-</div> <p><em>(default: 'dev/' + model.list.title + '.xml')</em></p></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="apdataservice-executequery-page"><ul>
+</div> <p><em>(default: apConfig.offlineXML + model.list.title + '.xml')</em></p></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="apdataservice-executequery-page"><ul>
 <li>Array of list item objects.</li>
 </ul>
 </div></td></tr></table></div>
