--- a/partials/api/Query.html
+++ b/partials/api/Query.html
@@ -12,7 +12,9 @@
 receive a more efficient response, just don&#39;t have the ability to check for changes since the last time
 the query was called.</p>
 </div> <p><em>(default: GetListItemChangesSinceToken)</em></p></td></tr><tr><td>config.cacheXML</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="query-page"><p>Set to false if you want a fresh request.</p>
-</div> <p><em>(default: true)</em></p></td></tr><tr><td>config.query</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="query-page"><p>CAML query passed to SharePoint to control
+</div> <p><em>(default: true)</em></p></td></tr><tr><td>[config.offlineXML]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="query-page"><p>Optionally reference a specific XML file to use for this query instead
+of using the shared XML file for this list.</p>
+</div></td></tr><tr><td>config.query</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="query-page"><p>CAML query passed to SharePoint to control
 the data SharePoint returns.</p>
 </div> <p><em>(default: Ordered ascending by ID)</em></p></td></tr><tr><td>[config.queryOptions]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="query-page"><p>SharePoint options.
 <pre class="prettyprint linenums">
