--- a/partials/api/angularPoint.apConfig.html
+++ b/partials/api/angularPoint.apConfig.html
@@ -7,14 +7,15 @@
 <div class="description"><div class="angularpoint-apconfig-page"><p>Basic config for the application (unique for each environment).  Update to change for your environment.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">apConfig(appTitle, debugEnabled, defaultUrl, [firebaseUrl], offline);</pre>
+<div class="usage"><pre class="prettyprint linenums">apConfig(appTitle, debug, defaultUrl, [firebaseUrl], [offline], offlineXML);</pre>
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>appTitle</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apconfig-page"><p>Name of the application in case you need to reference.</p>
-</div></td></tr><tr><td>debugEnabled</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-apconfig-page"><p>Determines if we should show debug code.</p>
+</div></td></tr><tr><td>debug</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-apconfig-page"><p>Determines if we should show debug code.</p>
 </div></td></tr><tr><td>defaultUrl</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apconfig-page"><p>Automatically sets the defaultUrl for web service calls so we don&#39;t need to make the
 initial blocking call by SPServices.</p>
 </div></td></tr><tr><td>[firebaseUrl]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apconfig-page"><p>Necessary if you&#39;re using apSyncService.  Look there for more details.</p>
-</div></td></tr><tr><td>offline</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-apconfig-page"><p>Automatically set based on the URL of the site.  Pulls offline XML when hosted locally.</p>
-</div></td></tr></tbody></table></div>
+</div></td></tr><tr><td>[offline]</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-apconfig-page"><p>Automatically set based on the URL of the site.  Pulls offline XML when hosted locally.</p>
+</div></td></tr><tr><td>offlineXML</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apconfig-page"><p>The location to look for offline xml files.</p>
+</div> <p><em>(default: 'dev/')</em></p></td></tr></tbody></table></div>
 <h2 id="example">Example</h2>
 <div class="example"><div class="angularpoint-apconfig-page"><p><h6 id="example_default-configuration">Default Configuration</h6>
 <pre class="prettyprint linenums">
@@ -36,7 +37,12 @@ angular.module('MyApp', ['my dependencies'])
      })
      .run(function(apConfig) {
          //To set the default site root
-         apConfig.defaultUrl = '//sharepoint.myserver.com/siteRoot';
+         apConfig.defaultUrl =
+           '//sharepoint.myserver.com/siteRoot';
+
+         //To set the default location to look for
+         //offline xml files.
+         apConfig.offlineXML = 'myCachedQueries/';
      });
 </pre>
 </div></div>
