--- a/partials/api/angularPoint.apDebugService.html
+++ b/partials/api/angularPoint.apDebugService.html
@@ -7,15 +7,41 @@
 <div class="description"><div class="angularpoint-apdebugservice-page"><p>Tools to assist with development.</p>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_savejson">saveJson(data, filename)</h3>
-<div class="savejson"><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savejson-page"><p>Converts an object into a JSON file that is then downloaded to the local machine.  Original script located
+<ul class="methods"><li><h3 id="methods_savefile">saveFile(data, type, filename)</h3>
+<div class="savefile"><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savefile-page"><p>Used to convert a JS object or XML document into a file that is then downloaded on the users
+local machine.  Original work located:
 <a href="http://bgrins.github.io/devtools-snippets/#console-save">here</a>.</p>
+</div><h5 id="methods_savefile_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>data</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savefile-page"><p>JS object that we&#39;d like to dump to a JSON file and save to the local machine.</p>
+</div></td></tr><tr><td>type</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savefile-page"><p>Can be either &#39;xml&#39; or &#39;json&#39;.</p>
+</div></td></tr><tr><td>filename</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savefile-page"><p>Optionally name the file.</p>
+</div> <p><em>(default: debug.json)</em></p></td></tr></tbody></table><h4 id="methods_savefile_example">Example</h4>
+<div class="example"><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savefile-page"><pre class="prettyprint linenums">
+//Lets assume we want to looks at an object that is too big to be easily viewed in the console.
+apDebugService.saveJSON(objectToSave, 'myobject.json');
+</pre>
+</div></div>
+</div>
+</li>
+<li><h3 id="methods_savejson">saveJSON(data, filename)</h3>
+<div class="savejson"><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savejson-page"><p>Simple convenience function that uses angularPoint.apDebugService:saveFile to download json to the local machine.</p>
 </div><h5 id="methods_savejson_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>data</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savejson-page"><p>JS object that we&#39;d like to dump to a JSON file and save to the local machine.</p>
 </div></td></tr><tr><td>filename</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savejson-page"><p>Optionally name the file.</p>
 </div> <p><em>(default: debug.json)</em></p></td></tr></tbody></table><h4 id="methods_savejson_example">Example</h4>
 <div class="example"><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savejson-page"><pre class="prettyprint linenums">
 //Lets assume we want to looks at an object that is too big to be easily viewed in the console.
-apDebugService.saveJson(objectToSave, 'myobject.json');
+apDebugService.saveJSON(objectToSave, 'myobject.json');
+</pre>
+</div></div>
+</div>
+</li>
+<li><h3 id="methods_savexml">saveXML(data, filename)</h3>
+<div class="savexml"><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savexml-page"><p>Simple convenience function that uses angularPoint.apDebugService:saveFile to download xml to the local machine.</p>
+</div><h5 id="methods_savexml_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>data</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savexml-page"><p>XML object that we&#39;d like to dump to a XML file and save to the local machine.</p>
+</div></td></tr><tr><td>filename</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savexml-page"><p>Optionally name the file.</p>
+</div> <p><em>(default: debug.xml)</em></p></td></tr></tbody></table><h4 id="methods_savexml_example">Example</h4>
+<div class="example"><div class="angularpoint-apdebugservice-page angularpoint-apdebugservice-savexml-page"><pre class="prettyprint linenums">
+//Lets assume we want to looks at an object that is too big to be easily viewed in the console.
+apDebugService.saveXML(objectToSave, 'myobject.xml');
 </pre>
 </div></div>
 </div>
