--- a/partials/api/apDataService.getFieldVersionHistory.html
+++ b/partials/api/apDataService.getFieldVersionHistory.html
@@ -7,10 +7,10 @@
 <div class="description"><div class="apdataservice-getfieldversionhistory-page"><p>Returns the version history for a field in a list item.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">getFieldVersionHistory(payload, fieldDefinition);</pre>
-<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>payload</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="apdataservice-getfieldversionhistory-page"><p>Configuration object passed to SPServices.
+<div class="usage"><pre class="prettyprint linenums">getFieldVersionHistory(options, fieldDefinition);</pre>
+<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>options</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="apdataservice-getfieldversionhistory-page"><p>Configuration object passed to SPServices.
 <pre class="prettyprint linenums">
-var payload = {
+var options = {
        operation: 'GetVersionCollection',
        webURL: apConfig.defaultUrl,
        strlistID: model.list.guid,
